[gd_scene load_steps=2 format=3 uid="uid://dfrqlj32lpepx"]

[ext_resource type="Script" uid="uid://sud5ldjrrrot" path="res://addons/GodotDevTools/scenes/scene_replacer.gd" id="1_jlifx"]

[node name="SceneReplacer" type="Window"]
oversampling_override = 1.0
size = Vector2i(450, 400)
script = ExtResource("1_jlifx")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="please_select_node" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Please select a node under which to replace all scenes originating from the specified path."
autowrap_mode = 2

[node name="path" type="LineEdit" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = "Path to scenes to be replaced (res://scenes/scene1.tscn)"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="substitute_path" type="LineEdit" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = "Path to scenes to be substituted (res://scenes/scene2.tscn)"

[node name="copy_transforms" type="CheckButton" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Copy transforms to new scenes"

[node name="remove" type="CheckButton" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Just remove all original scenes"

[node name="recursive" type="CheckButton" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Check recursively"

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "The currently selected node itself will not be checked by the replacement process, only its children."
autowrap_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="cancel" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8
text = "Cancel"

[node name="replace" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8
text = "Replace"

[connection signal="button_down" from="MarginContainer/VBoxContainer/HBoxContainer/replace" to="." method="_on_replace_button_down"]
